<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:hint="@string/username"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginTop="5dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:text="@string/login"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="5dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:text="@string/sign_up"
        android:textAllCaps="false" />

</RelativeLayout>