<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/title_tracker"
        android:text="@string/tracker_title"
        android:textAlignment="center"
        android:layout_margin="@dimen/twenty"
        android:textSize="@dimen/thirty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction_tracker"
        android:text="@string/tracker_instruct"
        android:textAlignment="center"
        android:layout_margin="@dimen/twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tracker" />

    <Button
        android:id="@+id/water_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/water_tracker"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_tracker"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/to_do_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_do_tracker"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/water_button"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/sleep_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        android:text="@string/sleep_tracker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_do_button"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/grocery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        android:text="@string/grocery_tracker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_button"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>