<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/title_setting"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:layout_margin="@dimen/twenty"
        android:textSize="@dimen/thirty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction_setting"
        android:text="@string/setting_instruct"
        android:textAlignment="center"
        android:layout_margin="@dimen/twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_setting" />

    <Button
        android:id="@+id/signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_setting"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/reset_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_user_account"
        android:layout_marginLeft="@dimen/two_hundred"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pass"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>