<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/peach"
    tools:context=".GroceryList">

    <TextView
        android:id="@+id/grocery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/grocery_title"
        android:textSize="@dimen/thirty_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grocery_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:text="@string/grocery_instruct"
        android:textSize="@dimen/eighteen_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grocery_title" />

    <ListView
        android:id="@+id/list_grocery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_fifty"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/forty"
        android:layout_marginTop="@dimen/twenty"
        app:layout_constraintTop_toBottomOf="@id/add_grocery"/>

    <Button
        android:id="@+id/delete_grocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_list"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/ten"
        app:layout_constraintStart_toEndOf="@+id/add_grocery"
        app:layout_constraintTop_toBottomOf="@id/grocery_info"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/add_grocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_marginTop="@dimen/ten"
        app:layout_constraintBottom_toBottomOf="@+id/delete_grocery"
        app:layout_constraintEnd_toStartOf="@+id/delete_grocery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grocery_info"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>