<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".SleepTracker">

    <TextView
        android:id="@+id/sleep_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty"
        android:text="@string/sleep_tracker"
        android:textAlignment="center"
        android:textSize="@dimen/thirty_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleep_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/sleep_instruct"
        android:textSize="@dimen/eighteen_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_title" />

    <EditText
        android:id="@+id/enter_sleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sleep_hint"
        android:inputType="numberDecimal"
        android:layout_margin="@dimen/twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_prompt"/>

    <Button
        android:id="@+id/submit_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_sleep"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/sleep_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:textSize="@dimen/eighteen_text"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_sleep" />

    <ImageView
        android:id="@+id/cat_sleep"
        android:src="@drawable/sleep"
        android:layout_width="@dimen/four_fifty_img"
        android:layout_height="@dimen/four_fifty_img"
        android:layout_marginTop="@dimen/forty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_average"
    />

</androidx.constraintlayout.widget.ConstraintLayout>